# libmicroemu

./: .gitignore  CMakeLists.txt  LICENSE  README.md  alu_8h_source.html  annotated.html  binary64bit__instr_8h_source.html  binary__branch__instr_8h_source.html  binary__branch__instr__with__imm_8h_source.html  binary__instr_8h_source.html  binary__instr__with__imm_8h_source.html  binary__instr__with__imm__carry_8h_source.html  binary__instr__with__rotation_8h_source.html  binary__instr__with__shift_8h_source.html  binary__load__instr__with__imm_8h_source.html  binary__null__instr__with__imm_8h_source.html  binary__null__instr__with__imm__carry_8h_source.html  binary__store__instr__with__imm_8h_source.html  bit__manip_8h_source.html  bkpt__flags_8h_source.html  bus_8h_source.html  clang-tidy  class_r_arg-members.html  class_r_arg.html  class_r_arg_const-members.html  class_r_arg_const.html  classes.html  classlibmicroemu_01_1_1internal_1_1_b1_imm_op-members.html  classlibmicroemu_01_1_1internal_1_1_b1_imm_op.html  classlibmicroemu_01_1_1internal_1_1_bl1_imm_op-members.html  classlibmicroemu_01_1_1internal_1_1_bl1_imm_op.html  classlibmicroemu_01_1_1internal_1_1_mem_ro-members.html  classlibmicroemu_01_1_1internal_1_1_mem_ro.html  classlibmicroemu_01_1_1internal_1_1_sys_ctrl_block-members.html  classlibmicroemu_01_1_1internal_1_1_sys_ctrl_block.html  classlibmicroemu_01_1_1internal_1_1_sys_ctrl_block_1_1_register_access_bfar-members.html  classlibmicroemu_01_1_1internal_1_1_sys_ctrl_block_1_1_register_access_bfar.html  classlibmicroemu_01_1_1internal_1_1_sys_ctrl_block_1_1_register_access_ccr-members.html  classlibmicroemu_01_1_1internal_1_1_sys_ctrl_block_1_1_register_access_ccr.html  classlibmicroemu_01_1_1internal_1_1_sys_ctrl_block_1_1_register_access_cfsr-members.html  (+1530 more)
src/libmicroemu/: CMakeLists.txt  logger.cpp  machine.cpp  microemu.cpp
src/libmicroemu/internal/: bkpt_flags.h  cpu_accessor.h  cpu_ops.h  delegates.h  emulator.h  i_breakpoint.h  result.h  svc_flags.h
src/libmicroemu/internal/bus/: bus.h  endianess_converters.h  mem_access_results.h
src/libmicroemu/internal/bus/mem/: mem_map_rw.h  mem_ro.h  mem_rw.h  mem_rw_optional.h  mem_traits.h
src/libmicroemu/internal/decoder/: decoder.h  instr.h  instr_flags.h  op_decoders.h
src/libmicroemu/internal/elf/: elf_reader.h
src/libmicroemu/internal/executor/: exec_results.h  executor.h  instr_context.h  instr_exec_results.h
src/libmicroemu/internal/executor/instr/: binary64bit_instr.h  binary_branch_instr.h  binary_branch_instr_with_imm.h  binary_instr.h  binary_instr_with_imm.h  binary_instr_with_imm_carry.h  binary_instr_with_rotation.h  binary_instr_with_shift.h  binary_load_instr_with_imm.h  binary_null_instr_with_imm.h  binary_null_instr_with_imm_carry.h  binary_store_instr_with_imm.h  nullary_instr.h  op_result.h  post_exec.h  special_instr.h  ternary_instr.h  ternary_instr_with_shift.h  ternary_load_instr_with_shift.h  ternary_null_instr_with_shift.h  ternary_store_instr_with_imm.h  ternary_store_instr_with_shift.h  unary_branch_instr.h  unary_branch_instr_imm.h  unary_instr.h  unary_instr_imm.h  unary_instr_imm_carry.h  unary_load_instr_imm.h  variadic_load_instr.h  variadic_store_instr.h  variadic_store_instr_db.h
src/libmicroemu/internal/fetcher/: fetcher.h  raw_instr.h  raw_instr_flags.h  raw_instr_flags_table.h
src/libmicroemu/internal/logic/: alu.h  exceptions_ops.h  if_then_ops.h  imm_shift_results.h  pc_ops.h  predicates.h  reg_access.h  reg_ops.h  reset_logic.h  spec_reg_access.h  spec_reg_ops.h  thumb.h  thumb_immediate_result.h
src/libmicroemu/internal/peripherals/: sys_ctrl_block.h  sys_tick.h
src/libmicroemu/internal/processor/: processor.h  step_flags.h
src/libmicroemu/internal/semihosting/: semihosting.h
src/libmicroemu/internal/trace/: intstr_to_mnemonic.h  memory_viewer.h  mnemonic_builder.h  mnemonic_builder_context.h  mnemonic_builder_flags.h
src/libmicroemu/internal/trace/instr/: mnemonic_builder_binary64bit_instr.h  mnemonic_builder_binary_instr.h  mnemonic_builder_binary_instr_with_imm.h  mnemonic_builder_binary_instr_with_imm_carry.h  mnemonic_builder_binary_instr_with_rotation.h  mnemonic_builder_binary_instr_with_shift.h  mnemonic_builder_binary_loadstore_instr_with_imm.h  mnemonic_builder_binary_null_instr.h  mnemonic_builder_binary_null_instr_with_imm.h  mnemonic_builder_binary_null_instr_with_imm_carry.h  (+34 more)
src/libmicroemu/internal/utils/: arg.h  bit_manip.h  const_string_builder.h  memory_helpers.h  rarg.h  traits.h
src/microemu/: CMakeLists.txt  main.cpp  reg_printer.h
tests/: CMakeLists.txt  test_microemu.cpp
tests/microemu/internal/: endianess_converters_test.cpp
tests/microemu/utils/: alu_tests.cpp  bit_manip_tests.cpp
tests/system_tests/: system_test.py  trace_diff.py
tests/system_tests/bare_stdlib/: CMakeLists.txt  arm-none-eabi.toolchain  bare_stdlib.trace  syscalls.c
tests/system_tests/bare_stdlib_nano/: CMakeLists.txt  arm-none-eabi.toolchain  bare_stdlib_nano.trace  internal.ld  main.cpp
tests/system_tests/printf_rdimon/: CMakeLists.txt  arm-none-eabi.toolchain  linker.ld  main.cpp  printf_rdimon.trace  startup.s
tests/system_tests/testbench/: CMakeLists.txt  arm-none-eabi.toolchain  linker.ld  update_prebuilt.sh
tests/system_tests/testbench/include/: scb.h  systick.h  test_crc.h  test_exceptions.h  test_fibonacci.h  test_float.h  test_heap.h  test_if_then_else.h  test_int_calc.h  test_irqs.h  test_polymorphismn.h  test_process_stack.h  test_quicksort.h  test_scb.h  test_sprintf.h  test_stack_alignment.h  test_std_algos.h  test_std_out.h  test_switch_case.h  test_type_casting.h  test_uint_calc.h
tests/system_tests/testbench/src/: main.cpp  startup.s  systick.cpp  test_crc.cpp  test_exceptions.cpp  test_fibonacci.cpp  test_float.cpp  test_heap.cpp  test_if_then_else.cpp  test_int_calc.cpp  test_irqs.cpp  test_polymorphismn.cpp  test_process_stack.cpp  test_quicksort.cpp  test_scb.cpp  test_sprintf.cpp  test_stack_alignment.cpp  test_std_algos.cpp  test_std_out.cpp  test_switch_case.cpp  test_type_casting.cpp  test_uint_calc.cpp
(+162 files in other folders)
